--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A számítógép - Bevezetés</title>
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <script src="bootstrap.bundle.min.js"></script>    
+    <link rel="stylesheet" href="style2.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand title" href="#">A számítógép</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-0">
+                    <li class="nav-item active">
+                        <a class="nav-link">Bevezető</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="the-computer.html">A számítógép</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container szoveg">
+        <h2>Bevezetés</h2>
+        <p>Ezen az oldalon a számítógépek felépítéséről, működéséről, és történetéről olvashatsz. Igyekeztünk összeszedni a lehető legtöbb információt, hogy sokat megtudj a számítógépekről, rövid, tömör cikkekben. Ha érdekelnek a számítógépek, ez az oldal neked való!</p>
+        <h4>Miről olvashatsz?</h4>
+        <p>Célunk az, hogy minden ember megértse a számítógépek világát, mindezt egy tömör, de mégis követhető és érthető formában. Mivel nem a legegyszerűbb témáról lesz szó, ezért részekre bontottuk, és ahol lehetett, leegyszerűsítettük. Összefoglaltuk a számítógép fő részeinek működéséről szóló információkat, olvashatsz arról is hogy a szoftver hogyan működik a számítógépen, és hogy hogyan vannak összhangban az alkatrészek.</p>
+        <p>Összefoglalva, olvashatsz a számítógép hardverének részeiről, a szoftverek típusairól és működéséről, és ennek a kettőnek a kapcsolatáról.</p>
+        <h4>Projektünk</h4>
+        <p>Nagyon keményen dolgoztunk projektünkön, amit hárman csináltunk a Pogány Frigyes Technikum 10. évfolyamán.</p>
+        <p>Az oldalon található információk forrása megbízható szakemberek, tanulmányok és a szerzők saját tapasztalatai. Reméljük, hogy élvezni fogod az olvasást, és hasznos információkat találsz.</p>
+        <br><h6 class="center">Készítők:</h6><br>
+        <ul class="sidelist">
+            <li>Vajk Ádám</li>
+            <li>Zakar Laura</li>
+            <li>Ország Zsolt</li>
+        </ul>
+        <p>A projektünk megtalálható <a href="https://github.com/AdamplayerHUN/computers-webpage" target="blank">Github</a>on, ahol a forráskód, a használt képek és egyéb fájlok is megtalálhatóak</p>
+        <h4>Köszönjük a támogatásodat!</h4>
+        <p>Reméljük, hogy élvezed az oldalt és hasznos információkkal gazdagodsz. Az oldal létrehozásához sok munka és odaadás szükséges volt, és nagy öröm számunkra, hogy megoszthatjuk veled a tudásunkat a számítógépek világáról.</p>
+        
+        <h4>Maradj velünk!</h4>
+        <p>Kövess minket a közösségi média platformokon, hogy értesülj az újdonságokról és frissítésekről. Ha bármilyen kérdésed vagy észrevételed van, ne habozz felvenni velünk a kapcsolatot. Az olvasóink véleménye számunkra nagyon fontos!</p>
+        <div class="container center support">
+            <a href="invalid.html"><img src="img/fb.png" alt="Facebook" width="50" height="50"></a>
+            <a href="invalid.html"><img src="img/ig.webp" alt="Instagram" width="50" height="50"></a>
+            <a href="invalid.html"><img src="img/yt.png" alt="Youtube" width="50" height="50"></a>
+        </div>
+    </div>
+</body>
+</html>
